fix: fix column container, column and task layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
 }
+
+html,
+body,
+#root {
+  height: 100%;
+}
